[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/deaths.png" type="Texture" id=1]
[ext_resource path="res://sprites/chests.png" type="Texture" id=2]
[ext_resource path="res://sprites/dash_cooldown_bg.png" type="Texture" id=3]
[ext_resource path="res://HUD.gd" type="Script" id=4]
[ext_resource path="res://ReturnToMainMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/dash_cooldown.png" type="Texture" id=6]
[ext_resource path="res://sprites/ka1.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_bottom = 3
font_data = ExtResource( 7 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 333.0
margin_bottom = 1060.0
size_flags_horizontal = 2

[node name="TextureButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 294.0
margin_bottom = 20.0
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 900.0
margin_right = 313.0
margin_bottom = 1040.0
size_flags_vertical = 10

[node name="DashCooldown" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 140.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/DashCooldown"]
margin_left = 10.0
margin_top = 10.0
margin_right = 130.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer/HBoxContainer/DashCooldown/VBoxContainer"]
margin_right = 120.0
margin_bottom = 120.0
value = 30.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 6 )
fill_mode = 4

[node name="Counters" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 313.0
margin_bottom = 140.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Counters"]
margin_left = 10.0
margin_top = 24.0
margin_right = 159.0
margin_bottom = 115.0
size_flags_vertical = 4
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathsCounter" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Counters/VBoxContainer"]
margin_right = 149.0
margin_bottom = 38.0
size_flags_vertical = 4
custom_constants/separation = 15

[node name="Number" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Counters/VBoxContainer/DeathsCounter"]
margin_right = 26.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
max_lines_visible = 1

[node name="Text" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Counters/VBoxContainer/DeathsCounter"]
margin_left = 41.0
margin_top = 9.0
margin_right = 149.0
margin_bottom = 29.0
size_flags_vertical = 4
texture = ExtResource( 1 )

[node name="ChestsCounter" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Counters/VBoxContainer"]
margin_top = 53.0
margin_right = 149.0
margin_bottom = 91.0
custom_constants/separation = 15

[node name="Number" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Counters/VBoxContainer/ChestsCounter"]
margin_right = 26.0
margin_bottom = 38.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Text" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Counters/VBoxContainer/ChestsCounter"]
margin_left = 41.0
margin_top = 9.0
margin_right = 149.0
margin_bottom = 29.0
size_flags_vertical = 4
texture = ExtResource( 2 )
